--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,7 +18,7 @@
             android:name=".tobuy.ToBuyActivity"
             android:exported="false" />
         <activity
-            android:name=".MainActivity"
+            android:name=".products.MainActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
