--- a/app/build.gradle
+++ b/app/build.gradle
@@ -84,7 +84,8 @@ dependencies {
     implementation "com.google.dagger:hilt-android:2.42"
     kapt "com.google.dagger:hilt-android-compiler:2.42"
 
-    implementation 'androidx.datastore:datastore-preferences:1.0.0'
+    //TODO: Разобраться как работает datastore в версии 1.0.0
+    implementation 'androidx.datastore:datastore-preferences:1.0.0-alpha02'
 
 }
 
